--- a/index.html
+++ b/index.html
@@ -1,167 +1,99 @@
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Update a feature in realtime</title>
-    <meta
-      name="viewport"
-      content="initial-scale=1,maximum-scale=1,user-scalable=no"
-    />
-    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js"></script>
-    <link
-      href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css"
-      rel="stylesheet"
-    />
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      #map {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="map"></div>
-
-    <script src="//d3js.org/d3.v5.min.js" charset="utf-8"></script>
-    <script>
-      mapboxgl.accessToken =
-        "pk.eyJ1IjoiYW5kcmV3bGV2aW5zb24iLCJhIjoiY2pub3RxNXB2MDA5cTNxb2M5MjNoaHl5diJ9.Zq4eS5UJd_60fgNBAFiUsw";
-      var map = new mapboxgl.Map({
-        container: "map",
-        style: "mapbox://styles/mapbox/satellite-v9",
-        zoom: 0
-      });
-
-      map.on("load", function() {
-        // We use D3 to fetch the JSON here so that we can parse and use it separately
-        // from GL JS's use in the added source. You can use any request method (library
-        // or otherwise) that you want.
-        d3.json("https://docs.mapbox.com/mapbox-gl-js/assets/hike.geojson")
-          .then(data => {
-            console.log(data);
-            // save full coordinate list for later
-            var coordinates = data.features[0].geometry.coordinates;
-
-            // start by showing just the first coordinate
-            data.features[0].geometry.coordinates = [coordinates[0]];
-
-            // add it to the map
-            map.addSource("trace", { type: "geojson", data: data });
-            map.addLayer({
-              id: "trace",
-              type: "line",
-              source: "trace",
-              paint: {
-                "line-color": "yellow",
-                "line-opacity": 0.75,
-                "line-width": 5
-              }
-            });
-
-            // setup the viewport
-            map.jumpTo({ center: coordinates[0], zoom: 14 });
-            map.setPitch(30);
-
-            // on a regular basis, add more coordinates from the saved list and update the map
-            var i = 0;
-            var timer = window.setInterval(() => {
-              if (i < coordinates.length) {
-                data.features[0].geometry.coordinates.push(coordinates[i]);
-                map.getSource("trace").setData(data);
-                map.panTo(coordinates[i]);
-                i++;
-              } else {
-                window.clearInterval(timer);
-              }
-            }, 10);
-          })
-          .catch(err => {
-            console.log(err);
-          });
-      });
-    </script>
-  </body>
-</html> -->
-
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- metas -->
     <meta charset="utf-8" />
-    <title>Style circles with a data-driven property</title>
-    <meta
-      name="viewport"
-      content="initial-scale=1,maximum-scale=1,user-scalable=no"
-    />
-    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>US Water Crisis</title>
+    <link rel="shortcut icon" type="image/png" href="favicon.ico" />
+
+    <!-- style -->
     <link
-      href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css"
+      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600,700|IBM+Plex+Sans:300,400,400i,500,600,700"
       rel="stylesheet"
     />
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-      }
-      #map {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        width: 100%;
-      }
-    </style>
+
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/default.css" />
+    <link rel="stylesheet" href="css/typography.css" />
+    <link rel="stylesheet" href="css/style.css" />
+
+    <!-- lib scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
   <body>
-    <div id="map"></div>
-    <script>
-      mapboxgl.accessToken =
-        "pk.eyJ1IjoiYW5kcmV3bGV2aW5zb24iLCJhIjoiY2pub3RxNXB2MDA5cTNxb2M5MjNoaHl5diJ9.Zq4eS5UJd_60fgNBAFiUsw";
-      var map = new mapboxgl.Map({
-        container: "map",
-        style: "mapbox://styles/mapbox/light-v9",
-        zoom: 12,
-        center: [-122.447303, 37.753574]
-      });
+    <div id="container">
+      <div id="title">
+        <h2>{{ chartTitle }}</h2>
+        <h5>{{ subTitle }}</h5>
+      </div>
+      <p class="intro">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+        repellendus fugit unde aut, commodi maiores in sapiente molestias ex hic
+        voluptate pariatur doloremque quod illum quibusdam quo! Architecto
+        repellat, alias eum accusantium enim dolore, omnis, animi nisi corporis
+        quibusdam dolorum voluptates laudantium incidunt. Laborum nam cupiditate
+        esse recusandae omnis
+      </p>
+      <div id="chart">
+        <svg :width="svgWidth" :height="svgHeight">
+          <g :transform="`translate(${margin.left}, ${margin.bottom})`">
+            <path class="link" :d="paths.line"></path>
+            <g v-for="(d, i) in data">
+              <circle
+                :cx="scale.x(d.year)"
+                :cy="scale.y(d.water)"
+                r="5"
+                @mouseover="showLabel = !showLabel,
+                myTooltip(d)"
+                @mouseleave="showLabel = !showLabel, myTooltip(d)"
+              />
 
-      map.on("load", function() {
-        map.addLayer({
-          id: "population",
-          type: "circle",
-          source: {
-            type: "vector",
-            url: "mapbox://examples.8fgz4egr"
-          },
+              <!-- <text
+                v-show="showLabel === true"
+                :x="scale.x(d.name) + 7"
+                :y="scale.y(d.expire) + 18"
+                text-anchor="middle"
+              >
+                {{ d.expire }}
+              </text> -->
+            </g>
 
-          "source-layer": "sf2010",
-          paint: {
-            // make circles larger as the user zooms from z12 to z22
-            "circle-radius": {
-              base: 1.75,
-              stops: [[12, 2], [22, 180]]
-            },
-            // color circles by ethnicity, using a match expression
-            // https://docs.mapbox.com/mapbox-gl-js/style-spec/#expressions-match
-            "circle-color": [
-              "match",
-              ["get", "ethnicity"],
-              "White",
-              "#fbb03b",
-              "Black",
-              "#223b53",
-              "Hispanic",
-              "#e55e5e",
-              "Asian",
-              "#3bb2d0",
-              /* other */ "#ccc"
-            ]
-          }
-        });
-      });
-    </script>
+            <g
+              v-axis:x="scale"
+              :transform="`translate(${0}, ${height})`"
+              id="x-axis"
+            ></g>
+            <g v-axis:y="scale"></g>
+            <text
+              y="-78"
+              :x="svgHeight/-2"
+              transform="rotate(-90)"
+              text-anchor="middle"
+              class="axis-title"
+            >
+              Renewable water resources (m3/year)
+            </text>
+            <text
+              :x="svgWidth - margin.right - margin.left - 5"
+              :y="svgHeight - margin.bottom - margin.top -10"
+              text-anchor="end"
+              class="axis-title"
+            >
+              Years
+            </text>
+            <text y="-30" x="-65" text-anchor="left" id="chart-one-title">
+              Total Renewable Water Resources Per Capita (m^3/inhab/year)
+            </text>
+          </g>
+        </svg>
+      </div>
+    </div>
+
+    <!-- script tags -->
+    <script src="scripts/script.js"></script>
   </body>
 </html>
