intro text update and some type style

--- a/index.html
+++ b/index.html
@@ -30,14 +30,24 @@
         <h2>{{ chartTitle }}</h2>
         <h5>{{ subTitle }}</h5>
       </div>
-      <p class="intro">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-        repellendus fugit unde aut, commodi maiores in sapiente molestias ex hic
-        voluptate pariatur doloremque quod illum quibusdam quo! Architecto
-        repellat, alias eum accusantium enim dolore, omnis, animi nisi corporis
-        quibusdam dolorum voluptates laudantium incidunt. Laborum nam cupiditate
-        esse recusandae omnis
-      </p>
+      <div class="intro">
+        <p>
+          Day Zero is often referred to as the day the water taps turn off. Once
+          seen as a remote scenario, water conservation is taken more seriously
+          now—especially after the crisis in Cape Town and other extreme water
+          stress events across the globe.
+        </p>
+        <p>
+          While an actual Day Zero is unlikely in the United States, we are
+          seeing high water stress events across the country due to crumbling
+          infrastructure, over-abstraction in of aquifers in agriculture, and
+          climate change that are cause for alarm.
+        </p>
+        <p>
+          If we do not take action to conserve water at a much more extreme
+          rate, a Day Zero scenario in the US becomes more plausible.
+        </p>
+      </div>
       <div id="chart">
         <svg :width="svgWidth" :height="svgHeight">
           <g :transform="`translate(${margin.left}, ${margin.bottom})`">
