updating style. seeing if position sticky fixed on mobile for chart one

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- metas -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+
+    <title>The United States Water Crisis</title>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+
+    <!-- style -->
+    <!-- google font -->
+    <link
+      href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600,700|IBM+Plex+Sans:300,400,400i,500,600,700"
+      rel="stylesheet"
+    />
+    <!-- mapbox -->
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css"
       rel="stylesheet"
     />
-
-    <title>us-water-crisis</title>
   </head>
   <body>
     <noscript>
