--- a/public/index.html
+++ b/public/index.html
@@ -15,17 +15,20 @@
       href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600,700|IBM+Plex+Sans:300,400,400i,500,600,700"
       rel="stylesheet"
     />
-    <!-- mapbox -->
+    <!-- mapbox. switch to mapbox-vue module  -->
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css"
       rel="stylesheet"
     />
+    <!-- d3 maps -->
+    <!-- <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script> -->
+    <script src="https://d3js.org/topojson.v2.min.js"></script>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but us-water-crisis doesn't work properly without
-        JavaScript enabled. Please enable it to continue.</strong
+        >Sorry but this project doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
       >
     </noscript>
     <div id="app"></div>
