move back to loading google fonts in html until i figure out better way. Update readme

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 
     <!-- style -->
     <!-- google font -->
-    <!-- <link
+    <link
       href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600,700|IBM+Plex+Sans:300,400,400i,500,600,700"
       rel="stylesheet"
-    /> -->
+    />
     <!-- mapbox. switch to mapbox-vue module later  -->
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css"
