style writing and spelling udpates. also deleted and cleaned up a lot fo unused code. no more prettier problems. still eslint warnings though...

--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,7 @@
       href="https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css"
       rel="stylesheet"
     />
-    <!-- d3 maps -->
-    <!-- <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script> -->
-    <!-- <script src="https://d3js.org/topojson.v2.min.js"></script> -->
+    <base target="_blank" />
   </head>
   <body>
     <noscript>
